# autowired

./: Cargo.toml
autowired_macros/: Cargo.toml
autowired_macros/src/: autowired_args.rs  autowired_data.rs  autowired_input.rs  lib.rs
src/: deps.rs  deps_builder.rs  graph_sorter.rs  lib.rs  provider.rs  provider_builder.rs
tests/: test1.rs  test2.rs  test_1.rs
