[package]
name = "autowired_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.43", features = ["full", "extra-traits"] }
uuid = { version = "1.6.1", features = ["v4"] }

[lib]
proc_macro = true
